# rust-lox

./: .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix  justfile
lox-tests/benchmarks/: method_call.lox
lox-tests/tests/: run  todo.txt  unexpected_character.stderr  unused.lox  unused.stderr
lox-tests/tests/assignment/: grouping.stderr  infix_operator.stderr  prefix_operator.stderr  to_this.stderr  undefined.stderr
lox-tests/tests/call/: bool.stderr  nil.stderr  num.stderr  object.stderr  string.stderr
lox-tests/tests/class/: bob_and_jane.lox  bob_and_jane.stdout  inherit_self.stderr  local_inherit_self.stderr
lox-tests/tests/closure/: reuse_closure_slot.stderr  unused_closure.stderr  unused_later_closure.stderr
lox-tests/tests/constructor/: call_init_early_return.stdout  call_init_explicitly.stdout  default.stdout  default_arguments.lox  default_arguments.stderr  early_return.stdout  extra_arguments.stderr  missing_arguments.lox  missing_arguments.stderr  return_in_nested_function.stdout  return_value.stderr
lox-tests/tests/field/: call_nonfunction_field.stderr  get_on_bool.lox  get_on_class.stderr  get_on_function.stderr  get_on_nil.stderr  get_on_num.stderr  get_on_string.stderr  set_evaluation_order.stderr  set_on_bool.stderr  set_on_class.stderr  set_on_function.stderr  set_on_nil.stderr  set_on_num.stderr  set_on_string.stderr  undefined.stderr
lox-tests/tests/for/: class_in_body.stderr  fun_in_body.stderr  scope.stderr  scope.stdout  statement_condition.stderr  statement_increment.stderr  statement_initializer.stderr  var_in_body.stderr
lox-tests/tests/function/: body_must_be_block.stderr  extra_arguments.stderr  global_mutual_recursion.lox  local_mutual_recursion.lox  local_mutual_recursion.stderr  missing_arguments.lox  missing_arguments.stderr  missing_comma_in_parameters.stderr  print.stdout  too_many_arguments.lox  (+3 more)
rlox-lib/: Cargo.toml
rlox-lib/src/: ast.rs  class.rs  environment.rs  interpreter.rs  lib.rs  lox.rs  object.rs  pretty_printers.rs  scanner.rs  span.rs  tokens.rs
rlox-lib/src/callable/: lox_function.rs  mod.rs  native.rs
rlox-lib/src/parser/: exprs.rs  mod.rs  stmts.rs
rlox-tw/: Cargo.toml  fizzbuzz.lox
rlox-tw/src/: ast.rs  environment.rs  interpreter.rs  lib.rs  lox.rs  main.rs  object.rs  parser.rs  pretty_printers.rs  resolver.rs  scanner.rs  span.rs  tokens.rs
rlox-tw/src/callable/: lox_function.rs  mod.rs  native.rs
rlox-tw/src/parser/: exprs.rs  mod.rs  stmts.rs
test-harness/: Cargo.toml
test-harness/src/: main.rs
(+91 files in other folders)
