[workspace]
resolver = "2"
members = ["rlox-tw"]

[workspace.package]
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
edition = "2021"
publish = false
repository = "https://github.com/DoctorDalek1963/rust-lox"
license = "GPL-3.0"

[workspace.dependencies]
color-eyre = "0.6.2"
rustyline = "12.0.0"
thiserror = "1.0.44"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
