[workspace]
resolver = "2"
members = ["rlox-lib", "rlox-tw", "test-harness"]

[workspace.package]
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
edition = "2021"
publish = false
repository = "https://github.com/DoctorDalek1963/rust-lox"
license = "GPL-3.0"

[workspace.dependencies]
color-eyre = "0.6.2"
clap = { version = "4.3.21", features = ["derive"] }
crossterm = "0.26.1"
home = "0.5.5"
lazy_static = "1.4.0"
rlox-lib = { path = "./rlox-lib" }
rustyline = "12.0.0"
thiserror = "1.0.44"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
