[package]
name = "rlox-lib"
version = "0.1.0-dev"
description = "A shared library for various implementations of a Lox interpreter."
edition.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
color-eyre.workspace = true
crossterm.workspace = true
home.workspace = true
lazy_static.workspace = true
rustyline.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
