[package]
name = "rlox-tw"
version = "0.1.0-dev"
description = "A tree-walk interpreter for Lox."
edition.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
color-eyre.workspace = true
crossterm = "0.26.1"
rustyline.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
