[package]
name = "test-harness"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
crossterm.workspace = true
num_cpus = "1.16.0"
rlox-lib.workspace = true
rlox-tw = { path = "../rlox-tw" }
strip-ansi = "0.1.0"
thiserror.workspace = true
threadpool = "1.8.1"
walkdir = "2.3.3"
